--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <link rel="manifest" href="manifest.json">
-        <meta name="theme-color" content="#5599ff">
+        <meta name="theme-color" content="#000000">
     </head>
     <body>
         yes
